--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6196,6 +6196,44 @@ margin-top:-130px !important
 .hd-div ul li a:hover{
   color: var(--color-red);
 }
+.Solution-banner h1.new-heding-colo{
+  color:#4facb3;
+  font-weight:400;
+  font-size:36px;
+  margin-bottom: 10px;
+}
+.Solution-banner h2.heading-h2{
+  font-weight:bold;
+  font-size:30px;
+  color:var(--color-blue);
+  line-height:1.2;
+  padding-bottom: 10px;
+}
+.Solution-banner p.banner-para{
+  padding-bottom: 10px;
+}
+.section-header-new-ct span{
+  font-weight: 400;
+}
+.card-ds-slide{
+  border: none !important;
+  box-shadow: 0 15px 30px 0 rgb(39 71 101 / 16%);
+}
+.card-ds-slide .card-title{
+  color: var(--color-blue);
+  font-size:18px;
+  font-weight:600;
+  letter-spacing: 0px;
+}
+.card-ds-slide .card-text{
+  font-size: 16px;
+  color: #000;
+  letter-spacing: 0px;
+}
+.card-ds-slide .card-body{
+  padding: 20px;
+}
+/*businecentermew*/
 /*power bi new sectio*/
 @media (min-width: 991px) {
   .mob-disp {
