--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6225,6 +6225,9 @@ margin-top:-130px !important
   border: none !important;
   box-shadow: 0 15px 30px 0 rgb(39 71 101 / 16%);
 }
+.card-ds-slide:hover{
+
+}
 .card-ds-slide .card-title{
   color: var(--color-blue);
   font-size:18px;
@@ -8034,17 +8037,39 @@ ul.checkmark li {
   color:#000
 }
 @media (max-width: 768px){
-  .nn-bg{
-    display:none
-  }
+
  
 }
 @media (max-width: 992px){
+  .slider-inner-solution-1 h3 {
+    font-size: 24px !important;
+  }
+  .casestudys .casestudys-slider-item .case-content-wrapper .case-content span {
+    font-size: 14px;
+
+}
+.casestudys .casestudys-slider-item .case-content-wrapper .case-content p {
+  margin-bottom: 0;
+  font-size: 24px;
+}
+.ppd-top {
+  padding-top: 30px;
+}
+  .solution-new-tab-content .inner-con-div{
+    box-shadow:none;
+    padding: 0px;
+  }
+  .solution-new-tab-content .inner-con-div .call-butt .btn-get-started {
+    text-align: center;
+}
+  .tabs-none{
+    display:none !important
+  }
   .back-bg{
     background: #f9f9f9;
   }
   .sidenn-wr h2 {
-    font-size: 30px;
+    font-size: 24px;
   }
   .slider-cap {
     margin-top: -30px !important;
@@ -8069,16 +8094,22 @@ ul.checkmark li {
   padding: 15px;
   height: auto;
 }
+.solution-new-tab-content{
+  max-width: 100%;
+  padding-top: 20px;
+}
+.bb{
+  display:none
+}
 }
 @media (min-width: 768px) and (max-width: 991px){
-  .nn-bg{
-    display:none
-  }
+
   .video-screen {
     width: 100%;
     height: 100%;
  
 }
+
 }
 
 @media (min-width: 992px) and (max-width: 1200px){
@@ -8096,3 +8127,11 @@ ul.checkmark li {
 @media (min-width: 1400px) {
 }
 
+.busine-swiper .swiper-wrapper {
+  -webkit-transition-timing-function:linear!important; 
+  -o-transition-timing-function:linear!important;
+  transition-timing-function:linear!important; 
+}
+.busine-swiper .swiper-container-free-mode > .swiper-wrapper{
+  transition-timing-function : linear;
+}
