--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6734,6 +6734,8 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#1c2d47",endCo
     font-size: 15px;
     font-weight: 600;
     color: var(--color-blue);
+    padding-left: 14px;
+    padding-top: 10px;
   }
   .mobile-nav-toggle,
   .navbar-mobile ul {
@@ -8162,4 +8164,27 @@ ul.checkmark li {
 }
 .busine-swiper .swiper-container-free-mode > .swiper-wrapper{
   transition-timing-function : linear;
+}
+
+ul.checkmark li::before {
+  content: "\F4EA";
+  position: absolute;
+  font-family: bootstrap-icons !important;
+  left: -23px;
+  top: 5px;
+  /* width: 6px;
+  height: 12px;
+  border: solid #ee3442;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg); */
+}
+ul.checkmark li {
+  list-style: none;
+  position: relative;
+  padding: 0 0 0 0px;
+  margin-bottom:10px;
+  color:#000
 }
