css mega menu fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -356,6 +356,9 @@ section {
   padding: 10px 0;
   display: block;
 }
+.navbar .dropdown{
+  margin-bottom:0px
+}
 .navbar a i,
 .navbar a:focus i {
   font-size: 12px;
@@ -3966,7 +3969,7 @@ section {
 }
 .navbar .dropdown:hover > .megamenu-list {
   opacity: 1;
-  top: 85%;
+  top: 80%;
   visibility: visible;
 }
 .navbar .dropdown:hover > .megamenu-list .right-list .rigt-list-menu ul {
