--- a/styles/globals.css
+++ b/styles/globals.css
@@ -102,9 +102,9 @@ svg {
   height: 1rem;
   position: relative;
 }
-ul li {
+/* ul li {
   margin-bottom: 10px;
-}
+} */
 #services,
 .Solution-banner,
 .extr-cont,
