new page update

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6439,7 +6439,7 @@ font-weight:400
   background-position: center;
 }
 .back-bg.back-power-bi{
-  background: url(/img/group-bg-bcbc.png) no-repeat;
+  background: url(/img/power-bi-botton-banners.png) no-repeat;
   background-size: cover;
   position: relative;
   z-index: 3;
