--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8118,6 +8118,24 @@ ul.checkmark li {
   color:#000
 }
 
+.cont-m-mobile{
+  position: absolute;
+    left: -35px;
+    top: 0px;
+    border-radius: 5px;
+    text-align: center;
+}
+.cont-m-mobile a{
+  line-height: 1.8;
+  width: 28px;
+  height: 28px;
+  display: inline-block;
+  background: #fff;
+  border-radius: 5px;
+  font-size: 16px;
+  box-shadow: 1px 0px 6px #0000003d;
+}
+
 @media (max-width: 992px){
   .repet-col .cont h3 {
     margin-bottom: 15px;
@@ -8271,3 +8289,8 @@ ul.checkmark li {
   list-style: none;
 }
 
+@media (min-width: 1181px){
+.cont-m-mobile{
+ display:none
+}
+}
