--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5596,6 +5596,7 @@ section {
 }
 .common-side-form {
   padding: 30px;
+  background-color:#fff;
   -webkit-box-shadow: 0 15px 30px 0 rgb(22 92 196 / 16%);
   -moz-box-shadow: 0 15px 30px 0 rgba(22, 92, 196, 0.16);
   box-shadow: 0 15px 30px 0 rgb(22 92 196 / 16%);
