--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6579,8 +6579,8 @@ font-weight:400
   position: fixed;
   bottom: 15px;
   left: 15px;
-  height: 45px;
-  width: 45px;
+  height: 60px;
+  width: 60px;
   margin-bottom: 20px;
   border-radius: 30px;
   box-shadow: 1px 3px 5px #888888;
@@ -6593,7 +6593,7 @@ font-weight:400
   color:#fff
 }
 .fixed-button:hover{
-  background-color:#1d3557
+  background-color: #ee3442;
 }
 /*businecentermew*/
 /*power bi new sectio*/
