--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6577,8 +6577,8 @@ font-weight:400
   border: none;
   outline: none;
   position: fixed;
-  bottom: 0px;
-  left: 15px;
+  bottom: 50px;
+  right: 15px;
   height: 60px;
   width: 60px;
   margin-bottom: 20px;
