remove all casestudy,idex, page update,redirctionadded

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -405,7 +405,7 @@ section {
 .kallyas-button:hover,
 .navbar .getstarted:focus:hover,
 .navbar .getstarted:hover {
-  background: var(--color-blue);
+  background: var(--color-blue) !important;
   color: #fff;
 }
 .navbar .dropdown ul {
@@ -954,11 +954,11 @@ section {
   }
 }
 .btn-custom-1 {
-  margin-top: 30px;
-  padding: 0.8rem 1.5rem;
-  border-radius: 5px;
-  color: #fff;
-  background: var(--color-red);
+  margin-top: 30p !importantx;
+  padding: 0.6rem 1.3rem !important;
+  border-radius: 5px !important;
+  color: #fff !important;
+  background: var(--color-red) !important;
 }
 .figer-box {
   display: flex;
@@ -1725,6 +1725,7 @@ section {
 .casestudys .casestudys-slider-item .case-content-wrapper {
   display: flex;
   flex-wrap: wrap;
+  margin-bottom:25px
 }
 .casestudys .casestudys-slider-item .case-content-wrapper .case-content {
   flex: 30%;
@@ -2147,6 +2148,9 @@ section {
   padding-right: 6px;
   color: #6c757d;
   content: ",";
+}
+.bg-case img {
+  width:140px
 }
 .bg-case p,
 .blog .entry .entry-footer .share,
@@ -5358,12 +5362,15 @@ section {
 }
 .commen-box-9 {
   padding: 30px 15px;
+  overflow: hidden;
+    display: block;
 }
 .commen-box-9 .icons img {
   width: 65%;
 }
+.commen-box-9 .icons-0102{margin: -35px -16px 25px -16px;}
 .commen-box-9 .icons-0102 img {
-  width: 150px;
+  width: 100%;
 }
 .commen-box-9 .commen-boc-2-info p {
   font-size: 16px;
@@ -6661,9 +6668,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#1c2d47",endCo
   .bg-case {
     padding: 15px;
   }
-  .bg-case img {
-    margin-bottom: 30px;
-  }
+  
   .case-clent-test {
     padding: 100px 30px;
   }
@@ -6707,7 +6712,9 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#1c2d47",endCo
 }
 }
 @media (max-width: 992px) {
-
+  .bg-case img {
+    margin-bottom: 30px;
+  }
   .about-timeline .swiper-pagination .swiper-pagination-bullet{
     margin-right: 45px !important;
   }
