--- a/styles/globals.css
+++ b/styles/globals.css
@@ -663,7 +663,11 @@ section {
 }
 .bbts,
 .bnner_inline_images {
-  padding-top: 80px;
+  padding-top: 40px;
+}
+.bnner_inline_images img{
+  mix-blend-mode: multiply;
+    width: 220px;
 }
 .bnner_inline_images ul {
   display: flex;
@@ -2432,7 +2436,7 @@ section {
   padding: 60px 0 30px;
 }
 .footer .footer-top .footer-info .footer-img {
-  width: 230px;
+  width: 214px;
   display: block;
   margin: 0 0 20px;
 }
