update page and popupform

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6653,6 +6653,81 @@ font-weight:400
 }
 /*businecentermew*/
 /*power bi new sectio*/
+
+
+/*pop up model */
+
+.backdrop-mod {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(4px);
+}
+
+.popup-cust {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 100;
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  width: 500px;
+}
+
+.popup-cust .modal-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding:20px
+}
+.popup-cust .modal-content h3{
+  text-align: center;
+  font-size: 24px;
+  margin-bottom: 20px;
+  color: var(--color-blue);
+  font-weight: 600;
+}
+
+.popup-cust .bbt {
+  position: absolute;
+  right: -18px;
+  top: -31px;
+  background: transparent;
+  border: none;
+}
+.popup-cust .bbt span{
+  font-size: 40px;
+  color: #b5b5b5;
+}
+.popup-cust .bbt:hover span{
+  color:red;
+  opacity:.7
+}
+
+.sty-newd{
+  padding:15px;
+  margin-bottom:30px
+}
+.sty-newd h3{
+  font-size: 20px;
+    font-weight: 600;
+    color: var(--color-blue);
+}
+.sty-newd p{}
+.sty-newd ul li{}
+
+
+
 @media (min-width: 991px) {
   .mob-disp {
     display: none;
@@ -6926,6 +7001,10 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#1c2d47",endCo
   }
 }
 @media (max-width: 600px) {
+  .popup-cust{
+    width:90%;
+    padding: 10px;
+  }
   .fixed-top,
   .header {
     padding: 15px 10px;
@@ -8395,3 +8474,8 @@ ul.checkmark li {
  display:none
 }
 }
+
+
+
+
+
